# flats_scraper

./: .gitignore  .gitpod.yml  LICENSE  Pipfile  README.md  Untitled.ipynb  alembic.ini  analysis_bayes.ipynb  convert_to_csv.py  db.db  develop_run.sh  docker-compose.yml  flats_data.csv  main.db  main.ps1  main.py  proxy_list.txt  pyproject.toml  requirements.txt  run_scraping.py  setup.py  sqlite.sqbpro  template.yaml  tmp.json
airflow-engine/: Dockerfile  airflow.cfg  main.sh
alembic/: env.py
alembic/versions/: 8ab59819cade_.py
crawlers/: convert_to_csv.py  requirements.txt  run_scraping.py  settings.py
crawlers/crawlers/: output.json  settings.py
crawlers/crawlers/spiders/: olx_otodom.py  site_map_main.json  (+2 more)
crawlers/spiders/: olx_otodom.py  site_map_main.json  site_map_olx.json  site_map_otodom.json  utils.py
dags/: flats_scraper.py
flats_scraper/: alembic.ini  app.py  flats_scraper.py  get_links.py  parse_functions.py  scrap_olx_page.py  scrap_otodom_page.py  scraper_model.py  scraper_settings.py  scraping_schedule.py
flats_scraper/alembic/: env.py
src/dags/: flats_scraper.py
src/flats_scraper/: README.md  __meta__.py  get_links.py  main.py  scraper_model.py  scraper_settings.py  scraping_schedule.py  setup.py
src/python_boilerplate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: build_test_case.py  conftest.py  test_get_links.py  test_olx_crawler.py  test_olx_scrap.py  test_otodom_scrap.py  test_with_sqlite.py
tests/test_src/: olx_test1.html  olx_test2.html  otodom_test1.html  search_result.html  search_result2.html
(+2 files in other folders)
